# pycompile

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  refactor.md  testing.md
.github/workflows/: ci.yml
cmake/: Package.cmake  Version.cmake
examples/: builtins.py  fibonacci.py  hello_world.py  list_ops.py  operators.py  simple_add.py
examples/control_flow/: comprehension.py  conditional.py  for.py  while.py
examples/data_structures/: dict.py  iter.py  list.py  set.py  string.py  tuple.py
examples/logic/: arithmetic.py  boolean.py
include/: bytecode.h  python_opcodes.h  utils.h
include/bytecode/: bytecode.h  python_error.h  python_opcodes.h  python_opcodes.inc  python_raii.h  pythoncode.h  serialize_bytecode.h
include/conversion/: builder_codegen.h  codegen_utils.h  control_flow_codegen.h  function_codegen.h  logical_codegen.h  memory_codegen.h  pyir_codegen.h
include/lowering/: builder_lowering.h  control_flow_lowering.h  function_lowering.h  llvm_export.h  logical_lowering.h  memory_lowering.h  pyir_conversion_utils.h  pyir_lowering.h  pyir_to_llvm.h
include/pyir/: pyir.h  pyir.td  pyir_attrs.h  pyir_codegen.h  pyir_ops.h  pyir_runtime.h  pyir_types.h  pyir_value.h
include/pyruntime/: builder_runtime.h  builtin_runtime.h  (+11 more)
packaging/: Containerfile.fedora  Containerfile.ubuntu  package.sh
pycompile/: CMakeLists.txt
pycompile/src/: main.cpp  utils.cpp  utils.hpp
pycompile/src/bytecode/: CMakeLists.txt  bytecode.cpp  bytecode.h  bytecode.hpp  python_error.cpp  python_opcodes.cpp  python_opcodes.h  python_raii.h  serialize_bytecode.cpp  serialize_bytecode.h  serialize_bytecode.hpp
pycompile/src/conversion/: CMakeLists.txt  builder_codegen.cpp  builder_codegen.h  builder_codegen.hpp  control_flow_codegen.cpp  control_flow_codegen.h  control_flow_codegen.hpp  function_codegen.cpp  function_codegen.h  function_codegen.hpp  logical_codegen.cpp  logical_codegen.h  logical_codegen.hpp  memory_codegen.cpp  memory_codegen.h  memory_codegen.hpp  pyir_codegen.cpp  pyir_codegen.h  pyir_codegen.hpp
pycompile/src/lowering/: CMakeLists.txt  builder_lowering.cpp  builder_lowering.h  builder_lowering.hpp  control_flow_lowering.cpp  control_flow_lowering.h  control_flow_lowering.hpp  function_lowering.cpp  function_lowering.h  function_lowering.hpp  llvm_export.cpp  llvm_export.hpp  logical_lowering.cpp  logical_lowering.h  logical_lowering.hpp  memory_lowering.cpp  memory_lowering.h  memory_lowering.hpp  pyir_conversion_utils.cpp  pyir_conversion_utils.hpp  pyir_lowering.cpp  pyir_lowering.hpp
pycompile/src/pyir/: CMakeLists.txt  pyir.cpp  pyir.td  pyir_attrs.cpp  pyir_attrs.h  pyir_attrs.hpp  pyir_ops.cpp  pyir_ops.h  pyir_ops.hpp  pyir_types.cpp  pyir_types.h  pyir_types.hpp
pystd/: CMakeLists.txt
pystd/include/: builder_runtime.h  builtin_runtime.h  function_runtime.h  memory_runtime.h  runtime_errors.h
pystd/src/: builder_runtime.cpp  builtin_runtime.cpp  control_flow_runtime.cpp  function_runtime.cpp  logical_runtime.cpp  main_runtime.cpp  memory_runtime.cpp  runtime_state.h  runtime_state.hpp  runtime_util.cpp  runtime_util.h  runtime_util.hpp
pystd/src/pytypes/: CMakeLists.txt  py_bool.cpp  py_bool.h  py_dict.cpp  py_dict.h  py_float.cpp  py_function.cpp  py_function.h  py_function.hpp  py_int.cpp  py_int.h  py_iter.h  py_list.cpp  py_list.h  py_method.cpp  py_method.h  py_none.cpp  py_none.h  py_object.cpp  py_object.hpp  py_set.cpp  py_set.h  py_str.cpp  py_str.h  py_tuple.cpp  py_tuple.h
pystd/src/pytypes/callables/: py_method.hpp
pystd/src/pytypes/iterables/: py_dict.cpp  py_dict.h  py_dict.hpp  py_iter.h  py_iter.hpp  py_list.cpp  py_list.h  py_list.hpp  py_set.cpp  py_set.h  py_set.hpp  py_tuple.cpp  py_tuple.h  py_tuple.hpp
pystd/src/pytypes/primitives/: py_bool.cpp  py_bool.h  py_bool.hpp  py_float.cpp  py_float.h  py_float.hpp  py_int.cpp  py_int.h  py_int.hpp  py_none.cpp  py_none.h  py_none.hpp  py_str.cpp  py_str.h  py_str.hpp
src/: CMakeLists.txt  bytecode.cpp  main.cpp  python_opcodes.cpp  pythoncode.cpp  utils.cpp
src/bytecode/: bytecode.cpp  python_error.cpp  python_opcodes.cpp  pythoncode.cpp  serialize_bytecode.cpp
src/conversion/: CMakeLists.txt  builder_codegen.cpp  control_flow_codegen.cpp  function_codegen.cpp  logical_codegen.cpp  memory_codegen.cpp  pyir_codegen.cpp
src/lowering/: CMakeLists.txt  builder_lowering.cpp  control_flow_lowering.cpp  function_lowering.cpp  llvm_export.cpp  logical_lowering.cpp  memory_lowering.cpp  pyir_conversion_utils.cpp  pyir_lowering.cpp  pyir_to_llvm.cpp
src/pyir/: CMakeLists.txt  pyir.cpp  pyir.td  pyir_attrs.cpp  pyir_codegen.cpp  pyir_ops.cpp  pyir_runtime.cpp  pyir_types.cpp
src/pyruntime/: CMakeLists.txt  builder_runtime.cpp  builtin_runtime.cpp  control_flow_runtime.cpp  function_runtime.cpp  logical_runtime.cpp  main_runtime.cpp  memory_runtime.cpp  pyir_runtime.cpp  runtime_objects.cpp  runtime_util.cpp
src/pyruntime/objects/: py_bool.cpp  py_dict.cpp  py_float.cpp  py_function.cpp  py_int.cpp  py_list.cpp  py_method.cpp  py_none.cpp  py_object.cpp  py_set.cpp  py_str.cpp  py_tuple.cpp
test/: CMakeLists.txt  test_bytecode.cpp  test_code_execution.cpp  test_llvm_ir_generation.cpp  test_main.cpp  test_mlir_codegen.cpp  test_pyir_codegen.cpp
test/bytecode/: test_bytecode.cpp
test/conversion/: codegen_test_utils.h  codegen_test_utils.hpp  test_builder_codegen.cpp  test_control_flow_codegen.cpp  test_function_codegen.cpp  test_logical_codegen.cpp  test_pyir_codegen.cpp
test/execution/: execution_test_utils.h  execution_test_utils.hpp  pyir_run_module.cpp  pyir_run_module.h  pyir_run_module.hpp  test_builtin_execution.cpp  test_code_execution.cpp  test_dict_execution.cpp  test_error_execution.cpp  test_iter_execution.cpp  test_list_execution.cpp  test_set_execution.cpp  test_str_execution.cpp  test_tuple_execution.cpp
test/lowering/: test_code_execution.cpp  test_llvm_ir_generation.cpp
version/: version.h.in
(+13 files in other folders)
